# policy-as-code

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  Taskfile.yml  askpass.sh  entrypoint.sh  other-docker-compose.yml  policy-as-code.yml  pyproject.toml  requirements.yml  setup.cfg  valid_ip.py
.github/etc/: dictionary.txt
.github/workflows/: ci.yml  commit.yml  update.yml
ansible/roles/demo-repos/tasks/: main.yml  update_known_hosts.yml
ansible/roles/demo-repos/templates/: config.j2
hack/: demo-repos.yml
