[bumpversion]
current_version = 2023.12.04
parse = (?P<year>2[0-1]\d{2})\.(?P<month>(0\d|1[0-2]))(.(?P<increment>\d{2}))?
serialize = {year}.{month}.{increment}
commit = True
tag = True

[metadata]
author = "Jon Zeolla"
description = "Setup Jon Zeolla's Policy as Code lab"
description-file = "README.md"
versioning = "CalVer"
license_file = "LICENSE"
name = "policy-as-code"
url = "https://github.com/JonZeolla/policy-as-code"

[bumpversion:file:VERSION]
